test-data/gke1/json-dumps/compute-effective-firewalls-default.json
{
  "firewalls": [
    {
      "id": "4050122067049385158",
      "creationTimestamp": "2022-01-12T02:49:13.408-08:00",
      "name": "gke-gke3-8614055e-vms",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "10.128.0.0/9"
      ],
      "targetTags": [
        "gke-gke3-8614055e-node"
      ],
      "allowed": [
        {
          "IPProtocol": "udp",
          "ports": [
            "1-65535"
          ]
        },
        {
          "IPProtocol": "icmp"
        },
        {
          "IPProtocol": "tcp",
          "ports": [
            "1-65535"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke3-8614055e-vms",
      "kind": "compute#firewall"
    },
    {
      "id": "6178578357092983582",
      "creationTimestamp": "2022-01-10T03:52:17.575-08:00",
      "name": "default-allow-rdp",
      "description": "Allow RDP from anywhere",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 65534,
      "sourceRanges": [
        "0.0.0.0/0"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "3389"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/default-allow-rdp",
      "kind": "compute#firewall"
    },
    {
      "id": "7790066785385123010",
      "creationTimestamp": "2022-01-12T02:49:17.383-08:00",
      "name": "gke-gke2-498f0ae5-all",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "10.8.0.0/14"
      ],
      "targetTags": [
        "gke-gke2-498f0ae5-node"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp"
        },
        {
          "IPProtocol": "udp"
        },
        {
          "IPProtocol": "icmp"
        },
        {
          "IPProtocol": "esp"
        },
        {
          "IPProtocol": "ah"
        },
        {
          "IPProtocol": "sctp"
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke2-498f0ae5-all",
      "kind": "compute#firewall"
    },
    {
      "id": "4982782612036750855",
      "creationTimestamp": "2022-01-10T05:13:12.099-08:00",
      "name": "gke-gke4-1019cf00-all",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "10.56.0.0/14"
      ],
      "targetTags": [
        "gke-gke4-1019cf00-node"
      ],
      "allowed": [
        {
          "IPProtocol": "udp"
        },
        {
          "IPProtocol": "icmp"
        },
        {
          "IPProtocol": "esp"
        },
        {
          "IPProtocol": "ah"
        },
        {
          "IPProtocol": "sctp"
        },
        {
          "IPProtocol": "tcp"
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke4-1019cf00-all",
      "kind": "compute#firewall"
    },
    {
      "id": "8787379795201729310",
      "creationTimestamp": "2022-01-10T03:52:17.554-08:00",
      "name": "default-allow-ssh",
      "description": "Allow SSH from anywhere",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 65534,
      "sourceRanges": [
        "0.0.0.0/0"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "22"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/default-allow-ssh",
      "kind": "compute#firewall"
    },
    {
      "id": "2883574164515654850",
      "creationTimestamp": "2022-01-12T02:49:17.862-08:00",
      "name": "gke-gke2-498f0ae5-vms",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "10.128.0.0/9"
      ],
      "targetTags": [
        "gke-gke2-498f0ae5-node"
      ],
      "allowed": [
        {
          "IPProtocol": "icmp"
        },
        {
          "IPProtocol": "tcp",
          "ports": [
            "1-65535"
          ]
        },
        {
          "IPProtocol": "udp",
          "ports": [
            "1-65535"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke2-498f0ae5-vms",
      "kind": "compute#firewall"
    },
    {
      "id": "2944636573556247638",
      "creationTimestamp": "2022-01-10T05:20:57.552-08:00",
      "name": "gke-gke1-79f3ce44-ssh",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "34.90.155.208/32"
      ],
      "targetTags": [
        "gke-gke1-79f3ce44-node"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "22"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke1-79f3ce44-ssh",
      "kind": "compute#firewall"
    },
    {
      "id": "4777054262673902678",
      "creationTimestamp": "2022-01-10T05:20:57.701-08:00",
      "name": "gke-gke1-79f3ce44-vms",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "10.128.0.0/9",
        "192.168.0.0/24"
      ],
      "targetTags": [
        "gke-gke1-79f3ce44-node"
      ],
      "allowed": [
        {
          "IPProtocol": "icmp"
        },
        {
          "IPProtocol": "tcp",
          "ports": [
            "1-65535"
          ]
        },
        {
          "IPProtocol": "udp",
          "ports": [
            "1-65535"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke1-79f3ce44-vms",
      "kind": "compute#firewall"
    },
    {
      "id": "4930761624550215175",
      "creationTimestamp": "2022-01-10T05:13:12.335-08:00",
      "name": "gke-gke4-1019cf00-master",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "10.0.1.0/28"
      ],
      "targetTags": [
        "gke-gke4-1019cf00-node"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "10250",
            "443"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke4-1019cf00-master",
      "kind": "compute#firewall"
    },
    {
      "id": "6371416603362435870",
      "creationTimestamp": "2022-01-10T03:52:17.533-08:00",
      "name": "default-allow-internal",
      "description": "Allow internal traffic on the default network",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 65534,
      "sourceRanges": [
        "10.128.0.0/9"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "0-65535"
          ]
        },
        {
          "IPProtocol": "udp",
          "ports": [
            "0-65535"
          ]
        },
        {
          "IPProtocol": "icmp"
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/default-allow-internal",
      "kind": "compute#firewall"
    },
    {
      "id": "8860082398838328514",
      "creationTimestamp": "2022-01-12T02:49:17.533-08:00",
      "name": "gke-gke2-498f0ae5-ssh",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "34.90.4.135/32",
        "34.91.189.82/32",
        "34.147.87.193/32"
      ],
      "targetTags": [
        "gke-gke2-498f0ae5-node"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "22"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke2-498f0ae5-ssh",
      "kind": "compute#firewall"
    },
    {
      "id": "1869160600675913223",
      "creationTimestamp": "2022-01-10T05:13:12.306-08:00",
      "name": "gke-gke4-1019cf00-vms",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "10.128.0.0/9"
      ],
      "targetTags": [
        "gke-gke4-1019cf00-node"
      ],
      "allowed": [
        {
          "IPProtocol": "icmp"
        },
        {
          "IPProtocol": "tcp",
          "ports": [
            "1-65535"
          ]
        },
        {
          "IPProtocol": "udp",
          "ports": [
            "1-65535"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke4-1019cf00-vms",
      "kind": "compute#firewall"
    },
    {
      "id": "7652525074820566214",
      "creationTimestamp": "2022-01-12T02:49:13.218-08:00",
      "name": "gke-gke3-8614055e-ssh",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "34.147.16.166/32",
        "34.90.75.250/32",
        "34.90.129.94/32"
      ],
      "targetTags": [
        "gke-gke3-8614055e-node"
      ],
      "allowed": [
        {
          "IPProtocol": "tcp",
          "ports": [
            "22"
          ]
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke3-8614055e-ssh",
      "kind": "compute#firewall"
    },
    {
      "id": "9209979855296373534",
      "creationTimestamp": "2022-01-10T03:52:17.596-08:00",
      "name": "default-allow-icmp",
      "description": "Allow ICMP from anywhere",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 65534,
      "sourceRanges": [
        "0.0.0.0/0"
      ],
      "allowed": [
        {
          "IPProtocol": "icmp"
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/default-allow-icmp",
      "kind": "compute#firewall"
    },
    {
      "id": "1662749875499109574",
      "creationTimestamp": "2022-01-12T02:49:13.291-08:00",
      "name": "gke-gke3-8614055e-all",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "10.4.0.0/14"
      ],
      "targetTags": [
        "gke-gke3-8614055e-node"
      ],
      "allowed": [
        {
          "IPProtocol": "udp"
        },
        {
          "IPProtocol": "icmp"
        },
        {
          "IPProtocol": "esp"
        },
        {
          "IPProtocol": "ah"
        },
        {
          "IPProtocol": "sctp"
        },
        {
          "IPProtocol": "tcp"
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke3-8614055e-all",
      "kind": "compute#firewall"
    },
    {
      "id": "1697307255377071190",
      "creationTimestamp": "2022-01-10T05:20:57.555-08:00",
      "name": "gke-gke1-79f3ce44-all",
      "description": "",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/networks/default",
      "priority": 1000,
      "sourceRanges": [
        "192.168.1.0/24"
      ],
      "targetTags": [
        "gke-gke1-79f3ce44-node"
      ],
      "allowed": [
        {
          "IPProtocol": "ah"
        },
        {
          "IPProtocol": "sctp"
        },
        {
          "IPProtocol": "tcp"
        },
        {
          "IPProtocol": "udp"
        },
        {
          "IPProtocol": "icmp"
        },
        {
          "IPProtocol": "esp"
        }
      ],
      "direction": "INGRESS",
      "logConfig": {
        "enable": false
      },
      "disabled": false,
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gke1-aaaa/global/firewalls/gke-gke1-79f3ce44-all",
      "kind": "compute#firewall"
    }
  ],
  "firewallPolicys": [
    {
      "name": "902824820698",
      "type": "HIERARCHY",
      "shortName": "default-firewall-policy",
      "displayName": "default-firewall-policy",
      "rules": [
        {
          "description": "",
          "priority": 600,
          "match": {
            "srcIpRanges": [
              "35.235.240.0/20"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "tcp",
                "ports": [
                  "22",
                  "3389"
                ]
              }
            ]
          },
          "action": "allow",
          "direction": "INGRESS",
          "kind": "compute#firewallPolicyRule"
        },
        {
          "description": "",
          "priority": 601,
          "match": {
            "srcIpRanges": [
              "35.191.0.0/16",
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "169.254.169.254",
              "104.132.0.0/14"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "INGRESS",
          "kind": "compute#firewallPolicyRule"
        },
        {
          "description": "",
          "priority": 602,
          "match": {
            "srcIpRanges": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "INGRESS",
          "kind": "compute#firewallPolicyRule"
        },
        {
          "description": "",
          "priority": 700,
          "match": {
            "srcIpRanges": [
              "0.0.0.0/0"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "deny",
          "direction": "INGRESS",
          "kind": "compute#firewallPolicyRule"
        },
        {
          "description": "",
          "priority": 2147483644,
          "match": {
            "destIpRanges": [
              "::/0"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "EGRESS",
          "kind": "compute#firewallPolicyRule"
        },
        {
          "description": "",
          "priority": 2147483645,
          "match": {
            "srcIpRanges": [
              "::/0"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "INGRESS",
          "kind": "compute#firewallPolicyRule"
        },
        {
          "description": "",
          "priority": 2147483646,
          "match": {
            "destIpRanges": [
              "0.0.0.0/0"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "EGRESS",
          "kind": "compute#firewallPolicyRule"
        },
        {
          "description": "",
          "priority": 2147483647,
          "match": {
            "srcIpRanges": [
              "0.0.0.0/0"
            ],
            "layer4Configs": [
              {
                "ipProtocol": "all"
              }
            ]
          },
          "action": "goto_next",
          "direction": "INGRESS",
          "kind": "compute#firewallPolicyRule"
        }
      ]
    }
  ]
}
